fixed height of landing page on mobile

--- a/client/src/pages/homepage/homepage.css
+++ b/client/src/pages/homepage/homepage.css
@@ -53,4 +53,7 @@
   .landing-content {
     width: 70%;
   }
+  .landing {
+    height: 100%;
+  }
 }
